improved package names, split demos