@@ -16,6 +16,21 @@ java {
     }
 }
 
-application {
-    mainClass = "demo.Main"
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.register<JavaExec>("lexer"){
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+    jvmArgs("--enable-preview")
+    group = "Demos"
+    mainClass = "lexer.Main"
+    classpath = sourceSets["main"].runtimeClasspath
+}
+
+tasks.register<JavaExec>("sockets"){
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+    group = "Demos"
+    mainClass = "sockets.Main"
+    classpath = sourceSets["main"].runtimeClasspath
 }
